// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Audit Logs page > view Audit Logs page matches Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ons-page__main ons-u-mt-l"
        id="main-content"
      >
        <h1
          class="ons-u-mb-l"
        >
          Questionnaire deployment history
        </h1>
        <button
          class="ons-btn ons-btn--small"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Reload
            </span>
          </span>
        </button>
        <div
          class="elementToFadeIn"
        >
          <div
            class="ons-table-scrollable ons-table-scrollable--on"
          >
            <div
              aria-label="Deployment history"
              class="ons-table-scrollable__content"
              role="region"
              tabindex="0"
            >
              <table
                class="ons-table"
                data-testid="audit-table-table"
                id="audit-table"
              >
                <thead
                  class="ons-table__head"
                >
                  <tr
                    class="ons-table__row"
                  >
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Date and time
                      </span>
                    </th>
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Information
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ons-table__body"
                >
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      19/02/2021 12:46:29
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--info"
                      >
                        Successfully uninstalled questionnaire OPN2012K
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ons-page__main ons-u-mt-l"
      id="main-content"
    >
      <h1
        class="ons-u-mb-l"
      >
        Questionnaire deployment history
      </h1>
      <button
        class="ons-btn ons-btn--small"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Reload
          </span>
        </span>
      </button>
      <div
        class="elementToFadeIn"
      >
        <div
          class="ons-table-scrollable ons-table-scrollable--on"
        >
          <div
            aria-label="Deployment history"
            class="ons-table-scrollable__content"
            role="region"
            tabindex="0"
          >
            <table
              class="ons-table"
              data-testid="audit-table-table"
              id="audit-table"
            >
              <thead
                class="ons-table__head"
              >
                <tr
                  class="ons-table__row"
                >
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Date and time
                    </span>
                  </th>
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Information
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ons-table__body"
              >
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    19/02/2021 12:46:29
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--info"
                    >
                      Successfully uninstalled questionnaire OPN2012K
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Audit Logs page > view Audit Logs page matches Snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ons-page__main ons-u-mt-l"
        id="main-content"
      >
        <h1
          class="ons-u-mb-l"
        >
          Questionnaire deployment history
        </h1>
        <button
          class="ons-btn ons-btn--small"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Reload
            </span>
          </span>
        </button>
        <div>
          <div
            class="ons-table-scrollable ons-table-scrollable--on"
          >
            <div
              aria-label="Deployment history"
              class="ons-table-scrollable__content"
              role="region"
              tabindex="0"
            >
              <table
                class="ons-table"
                data-testid="audit-table-table"
                id="audit-table"
              >
                <thead
                  class="ons-table__head"
                >
                  <tr
                    class="ons-table__row"
                  >
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Date and time
                      </span>
                    </th>
                    <th
                      class="ons-table__header ons-table__header--top"
                      scope="col"
                    >
                      <span
                        class="ons-table__header-text"
                      >
                        Information
                      </span>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ons-table__body"
                >
                  <tr
                    class="ons-table__row"
                    data-testid="questionnaire-table-row"
                  >
                    <td
                      class="ons-table__cell "
                    >
                      19/02/2021 12:46:29
                    </td>
                    <td
                      class="ons-table__cell "
                    >
                      <span
                        class="ons-status ons-status--info"
                      >
                        Successfully uninstalled questionnaire OPN2012K
                      </span>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ons-page__main ons-u-mt-l"
      id="main-content"
    >
      <h1
        class="ons-u-mb-l"
      >
        Questionnaire deployment history
      </h1>
      <button
        class="ons-btn ons-btn--small"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Reload
          </span>
        </span>
      </button>
      <div>
        <div
          class="ons-table-scrollable ons-table-scrollable--on"
        >
          <div
            aria-label="Deployment history"
            class="ons-table-scrollable__content"
            role="region"
            tabindex="0"
          >
            <table
              class="ons-table"
              data-testid="audit-table-table"
              id="audit-table"
            >
              <thead
                class="ons-table__head"
              >
                <tr
                  class="ons-table__row"
                >
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Date and time
                    </span>
                  </th>
                  <th
                    class="ons-table__header ons-table__header--top"
                    scope="col"
                  >
                    <span
                      class="ons-table__header-text"
                    >
                      Information
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody
                class="ons-table__body"
              >
                <tr
                  class="ons-table__row"
                  data-testid="questionnaire-table-row"
                >
                  <td
                    class="ons-table__cell "
                  >
                    19/02/2021 12:46:29
                  </td>
                  <td
                    class="ons-table__cell "
                  >
                    <span
                      class="ons-status ons-status--info"
                    >
                      Successfully uninstalled questionnaire OPN2012K
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
